--- a/app/src/main/res/layout/languages.xml
+++ b/app/src/main/res/layout/languages.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -23,7 +22,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:text="English"
+        android:text="To_test_language"
         android:textColor="@color/main_color"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -40,7 +39,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:text="Russian"
+        android:text="From_test_language"
         android:textColor="@color/main_color"
         android:textSize="18sp"
         android:textStyle="bold"
